--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server =.; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;"
-  }
+  },
+  "ApiBaseURL": "https://localhost:7054"
 }
