--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server =.; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;"
+    "DefaultConnection": "Server =.; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;",
+    "Redis": "localhost"
   },
   "ApiBaseURL": "https://localhost:7054"
 }
