--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server =.; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;",
+    "IdentityConnection": "Server =.; Database = Talabat.Identity.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;",
     "Redis": "localhost"
   },
   "ApiBaseURL": "https://localhost:7054"
