JWT Token Creation

--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -11,5 +11,11 @@
     "IdentityConnection": "Server =.; Database = Talabat.Identity.APIs ; Trusted_Connection = True ; TrustServerCertificate=True;",
     "Redis": "localhost"
   },
+  "JWT": {
+    "Key": "hY5aNpF9tX7qC3mK1xL8zW4bE2rU6gD0",
+    "ValidIssuer": "https://localhost:7054",
+    "ValidAudience": "MySecuredApiUsers",
+    "DurationInDays": "30"
+  },
   "ApiBaseURL": "https://localhost:7054"
 }
